--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <label>The add to home screen popup will be generated on clicking the button for android devices</label><br>
 <label>For iOS the button click will show a alert popup on how to Add the app to home screen</label>
 <h3>Click the button below to generate popup</h3>
-  <button *ngIf="!_platform.IOS" (click)="installPwa()">
+  <button (click)="installPwa()">
     Add to home screen
   </button>
 
