--- a/src/app/popup/popup.component.html
+++ b/src/app/popup/popup.component.html
@@ -1,4 +1,4 @@
-<div>
+<div style="height: 250px;">
     <p>To Add the page to home Screen</p>
     <div>
         <img width="75%" src="../../assets/shareBtn.png">
